samples/_failures_safe/1761653421_20c8d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_109618d6.c: In function ‘main’:
./samples/SAFE/__tmp_109618d6.c:158:12: error: missing terminating " character
  158 |     printf("Enter elements for first matrix (%d x %d):\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_109618d6.c:158:5: error: expected expression at end of input
  158 |     printf("Enter elements for first matrix (%d x %d):\
      |     ^~~~~~
./samples/SAFE/__tmp_109618d6.c:158:5: error: expected declaration or statement at end of input
